<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">training101_testapp</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="password1">********</string>
    <string name="enter_user_name">enter user name</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="title_activity_submit">SubmitActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
