<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
          android:layout_height="35dp"
          android:textSize="12sp"
        android:text="@string/username"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
         />
    
 <TextView
         android:id="@+id/pass"
        android:layout_width="wrap_content"
          android:layout_height="35dp"
          android:textSize="12sp"
        android:text="@string/password" 
        android:layout_below="@+id/user"
        android:layout_marginRight="9dp"
          >
     </TextView>

      <EditText
          android:id="@+id/username"
          android:layout_width="wrap_content"
          android:layout_height="35dp"
          android:textSize="12sp"
          android:layout_toRightOf="@id/user"
          android:hint="@string/enter_user_name"
          android:layout_alignParentRight="true"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
           >
</EditText>
     <EditText android:id="@+id/password"
           android:inputType="textPassword"
           android:hint="@string/password1"          
        android:layout_toRightOf="@id/pass"
        android:layout_below="@id/username"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
          android:layout_height="35dp"
          android:textSize="12sp"
          android:layout_marginRight="10dp"
          android:layout_alignParentRight="true"
        ></EditText>
    	<Button 
    	    android:id="@+id/login"
    	    android:hint="@string/login"
    	     android:layout_width="wrap_content"
    	     android:layout_height="35dp"
    	     android:layout_below="@+id/pass"
    	     android:layout_marginLeft="60dp"
    	     android:textSize="13sp"
    	     android:onClick="submitfn"
    	    />
    
</RelativeLayout>
               
   